[package]
name = "simple_evmbin"
description = "Parity's EVM implementation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[[bin]]
name = "parity-patched-evm"
path = "./src/main.rs"

[dependencies]
docopt = "0.8"
env_logger = "0.5"
ethcore = { path = "../ethcore", features = ["test-helpers", "json-tests"] }
ethjson = { path = "../json" }
parity-bytes = "0.1"
ethcore-transaction = { path = "../ethcore/transaction" }
ethereum-types = "0.4"
evm = { path = "../ethcore/evm" }
panic_hook = { path = "../util/panic_hook" }
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
vm = { path = "../ethcore/vm" }
rlp = { version = "0.2.4", features = ["ethereum"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.1"
tempdir = "0.3"

[features]
evm-debug = ["ethcore/evm-debug-tests"]
