[package]
description = "Shadow memory for Parity EVM"
homepage = "https://github.com/smartdec/parity-ethereum"
license = "GPL-3.0"
name = "shadow-mem"
version = "0.0.1"
authors = ["SmartDec <info@smartdec.net>"]

[dependencies]
ethereum-types = "0.4"
parity-bytes = "0.1"

[dev-dependencies]
kvdb-memorydb = "0.1"
ethcore-io = { path = "../../util/io" }
tempdir = "0.3"
