[package]
description = "Shadow memory for Parity EVM"
homepage = "https://github.com/smartdec/parity-ethereum"
license = "GPL-3.0"
name = "shadow-mem"
version = "0.0.1"
authors = ["SmartDec <info@smartdec.net>"]

[dependencies]
ethereum-types = "0.4"
parity-bytes = "0.1"
rlp = { version = "0.3.0", features = ["ethereum"] }
rlp_derive = { path = "../../util/rlp_derive" }

[dev-dependencies]
kvdb-memorydb = "0.1"
ethcore-io = { path = "../../util/io" }
tempdir = "0.3"
